# P10_Open_C

./: .gitignore  README.md  manage.py  pyproject.toml
P10_Open_C/: asgi.py  settings.py  urls.py  wsgi.py
sofdesk/: pyproject.toml
sofdesk/app/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
sofdesk/app/migrations/: 0001_initial.py  0002_initial.py  0003_rename_projet_project.py  0004_rename_projet_contributor_project_and_more.py  0005_comment_id_alter_comment_uuid.py  0006_alter_comment_id.py  0007_alter_project_name.py  0008_contributor_user_alter_comment_author_and_more.py  0009_alter_project_author.py
sofdesk/authenticate/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
sofdesk/authenticate/migrations/: 0001_initial.py  0002_alter_user_user_id.py  0003_user_age.py  0004_remove_user_age_alter_user_username.py
sofdesk/flake-report/: index.html
sofdesk/sofdesk/: settings.py  urls.py
sofdeskt/: db.sqlite3  manage.py
sofdeskt/sofdeskt/: asgi.py  settings.py  urls.py  wsgi.py
